<resources>
    <string name="app_name">Practica02-TheGameOfPig</string>
    <string name="lbl_P1">Player 1</string>
    <string name="lbl_P2">Player 2</string>
    <string name="umbral_P1">0</string>
    <string name="umbral_P2">0</string>
    <string name="current_P1">0</string>
    <string name="current_P2">0</string>
    <string name="lbl_Btn_Roll">Roll Dice</string>
    <string name="lbl_Btn_Hold">Hold</string>
    <string name="lbl_Current_P1">Current</string>
    <string name="lbl_Current_P2">Current</string>
    <string name="lbl_Dice_Result">" "</string>
    <string name="lbl_Btn_Restart">New Game</string>
    <string name="lbl_Result1">Ha Ganado Player 1</string>
    <string name="lbl_Result2">Ha Ganado Player 2</string>
</resources>