<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnRoll"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="376dp"
        android:layout_marginBottom="96dp"
        android:text="@string/lbl_Btn_Roll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnHold"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="376dp"
        android:layout_marginBottom="40dp"
        android:text="@string/lbl_Btn_Hold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Btn_Restart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewLblP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="50dp"
        android:text="@string/lbl_P1"
        android:textColorHighlight="#FF0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewLblP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="142dp"
        android:text="@string/lbl_P2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewDice"
        android:layout_width="22dp"
        android:layout_height="20dp"
        android:layout_marginTop="80dp"
        android:background="@android:color/holo_blue_bright"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="@string/lbl_Dice_Result"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/lbl_Result1"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewUmbralP1"
        android:layout_width="26dp"
        android:layout_height="20dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="30dp"
        android:text="@string/umbral_P1"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewLblP1" />

    <TextView
        android:id="@+id/txtViewUmbralP2"
        android:layout_width="26dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="157dp"
        android:text="@string/umbral_P2"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewLblP2" />

    <TextView
        android:id="@+id/txtViewCurrentlP1"
        android:layout_width="26dp"
        android:layout_height="20dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="125dp"
        android:text="@string/current_P1"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewUmbralP1" />

    <TextView
        android:id="@+id/txtViewCurrentlP2"
        android:layout_width="26dp"
        android:layout_height="20dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="157dp"
        android:text="@string/current_P2"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewUmbralP2" />

    <TextView
        android:id="@+id/lblCurrentP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="8dp"
        android:text="@string/lbl_Current_P1"
        app:layout_constraintBottom_toTopOf="@+id/txtViewCurrentlP1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblCurrentlP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="8dp"
        android:text="@string/lbl_Current_P2"
        app:layout_constraintBottom_toTopOf="@+id/txtViewCurrentlP2"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_bright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>